# tax2go-search

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/http/: auth.rs  error.rs  mod.rs  routes.rs  webui.rs
src/search/: index_manager.rs  mod.rs  models.rs  schema.rs
tests/: integration_test.rs
